# sl-assignment

./: .gitignore  .gitmodules  CMakeLists.txt  Client.hpp  Command.hpp  Object.cpp  Object.hpp  Pipe.hpp  README.md  client.cpp  server.cpp
